Bug 344656 - Saving-as Kexi object should close window of object that will be overwritten
Summary: Saving-as Kexi object should close window of object that will be overwritten
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: General (other bugs)
Version First Reported In: 2.9.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 2.9.3
Assignee: Roman Shtemberko
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2015-02-28 10:46 UTC by Jarosław Staniek
Modified: 2015-04-25 22:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9.3
Sentry Crash Report:


Attachments
Two windows, one with previous, second with new contents of the object. (10.23 KB, image/png)
2015-02-28 10:46 UTC, Jarosław Staniek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2015-02-28 10:46:21 UTC
Created attachment 91340 [details]
Two windows, one with previous, second with new contents of the object.

Saving-as Kexi object should close window of object that will be overwritten.

Reproducible: Always

Steps to Reproduce:
1. Open any object O1 (eg. query) in any view
2. Open another object O2 (of the same type as O1) in the design view
3. "Save As" O2 and pick the name of the existing object O1 as the destination name.
4. Kexi will ask about overwriting O1, accept it.


Actual Results:  
After confirmation O2 gets saved-as and two tabs for object O1 will stay on screen. See the attachment.

Expected Results:  
The original window with O1 opened in step #1 should be closed before overwriting is performed.

Notes:
* Applies to any objects available for save-as context command, actually everything but tables. 
* This is a general logic issue.
* Quite severe issue as user has access to the old nonexisting representation of an object (O1) and may start to use or modify it. Crashes or data design/loss can happen.
Comment 1 Jarosław Staniek 2015-04-25 22:28:38 UTC
Git commit a76adc679e97a26c67d5ae852b4cc0cb77714356 by Jaroslaw Staniek, on behalf of Roman Shtemberko.
Committed on 25/04/2015 at 22:27.
Pushed by staniek into branch 'calligra/2.9'.

Close window with object object that will be overwritten after save-as in Kexi
REVIEW:123383

M  +14   -0    kexi/main/KexiMainWindow.cpp

http://commits.kde.org/calligra/a76adc679e97a26c67d5ae852b4cc0cb77714356