Close window with object object that will be overwritten after save-as in Kexi

BUG:344656
REVIEW:123383